--- a/src/app/dashboard/homeboard/homeboard.component.html
+++ b/src/app/dashboard/homeboard/homeboard.component.html
@@ -1,10 +1,13 @@
 <div class="grid-container">
   <h1 class="mat-h1">Dashboard</h1>
-  <mat-grid-list cols="4" rowHeight="450px">
+  <mat-grid-list cols="4" rowHeight="500px">
     <mat-grid-tile *ngFor="let card of allProducts" [colspan]="1" [rowspan]="1">
       <mat-card class="dashboard-card">
-        <mat-card-content class="dashboard-card-content">
-          <img mat-card-image src='{{card.image}}' alt="">
+        <mat-card-content *ngIf="card.image" class="dashboard-card-content">
+          <!-- <img mat-card-image src='{{card.image}}' alt=""> -->
+          <!-- prevent downloading 90pics every refresh -->
+          <img mat-card-image src='{{allProducts[0].image}}' alt="no image">
+          <!-- ^^ -->
         </mat-card-content>
         <mat-chip-list *ngIf="card.marks">
           <mat-chip *ngIf="card.marks.includes('LastItems')" color="accent" selected>Last items</mat-chip>
@@ -12,10 +15,12 @@
         </mat-chip-list>
         <mat-card-header>
           <mat-card-title>
-            {{card.name}}
+            {{card.producer}}
+            <mat-card-subtitle>{{card.name}}</mat-card-subtitle>
             <button mat-icon-button class="more-button" [matMenuTriggerFor]="menu" aria-label="Toggle menu">
               <mat-icon>more_vert</mat-icon>
             </button>
+            <button mat-raised-button color="primary">Buy</button>
             <mat-menu #menu="matMenu" xPosition="before">
               <button mat-menu-item>Expand</button>
               <button mat-menu-item>Remove</button>
