--- a/src/app/dashboard/homeboard/homeboard.component.scss
+++ b/src/app/dashboard/homeboard/homeboard.component.scss
@@ -1,21 +1,21 @@
-.grid-container {
-  margin: 20px;
-}
+.dashboard {
+  .badges {
+    .badge {
+      margin-right: 4%;
+    }
+  }
 
-.dashboard-card {
-  position: absolute;
-  top: 15px;
-  left: 15px;
-  right: 15px;
-  bottom: 15px;
-}
+  .prices {
+    line-height: 50%;
+    margin-top: -15%;
 
-.more-button {
-  position: absolute;
-  top: 5px;
-  right: 10px;
-}
+    .price {
+      color: red;
+    }
 
-.dashboard-card-content {
-  text-align: center;
+    .old-price {
+      text-decoration: line-through;
+      color: grey;
+    }
+  }
 }
